--- a/Pra11_MVVM/app/src/main/res/layout/activity_main.xml
+++ b/Pra11_MVVM/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.pra11_mvvm.viewmodel.MainViewModel" />
+            type="com.example.pra11_mvvm.view.MainActivity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,57 +13,40 @@
         android:layout_height="match_parent"
         tools:context=".view.MainActivity">
 
-        <EditText
-            android:id="@+id/editTitle"
-            android:layout_width="0dp"
+
+        <TextView
+            android:id="@+id/counterTV"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:hint="title"
             android:text="@{viewModel.title}"
-            android:textColor="@color/black"
-            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/floatingActionButton2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/editSubtitle"
-            android:layout_width="0dp"
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:hint="subtitle"
-            android:text="@{viewModel.subtitle}"
-            android:textColor="@color/black"
-            android:textSize="12sp"
+            android:layout_marginBottom="50dp"
+            android:clickable="true"
+            android:onClick="@{viewModel::onAddButtonClick}"
+            app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTitle" />
+            app:srcCompat="@drawable/abc_vector_test" />
 
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="0dp"
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:onClick="@{() -> viewModel.button1()"
-            android:text="버튼"
+            android:layout_marginBottom="50dp"
+            android:clickable="true"
+            android:onClick="@{viewModel::onSubButtonClick}"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editSubtitle" />
-
-        <TextView
-            android:id="@+id/tvSignup"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:onClick="@{() -> viewModel.button2()"
-            android:text="tvSignUp"
-            android:gravity="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button1" />
+            android:src="@drawable/ic_launcher_foreground" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
